--- a/HelloAndroidStudio/app/src/main/res/layout/activity_main.xml
+++ b/HelloAndroidStudio/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="516dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical">
 
 
@@ -53,10 +53,12 @@
         android:onClick="testFrame"/>
 
     <Button
+        android:id="@+id/button6"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="测试ListView"
-        android:onClick="testListView"/>
+        android:onClick="testListView"
+        android:text="测试ListView" />
+
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -73,5 +75,6 @@
         android:layout_height="wrap_content"
         android:text="测试BaseAdapter"
         android:onClick="testBaseAdapter"/>
+    
 
 </LinearLayout>
